--- a/_swiper.cshtml
+++ b/_swiper.cshtml
@@ -1,4 +1,5 @@
 @inherits Custom.Hybrid.Razor12
+@using Newtonsoft.Json;
 @using ToSic.Razor.Blade;
 @{
   var parts = CreateInstance("Parts.cs");
@@ -87,18 +88,25 @@
 </div>
 
 <script src="@App.Path/dist/scripts.min.js" data-enableoptimizations="false"></script>
+@{
+  var page = GetService<ToSic.Sxc.Web.IPageService>();
+  page.Activate("turnOn"); // see https://r.2sxc.org/turnon
 
-<script>
-  // Initialize the swiper which is identified by the Id of this configuration
-  appSwiperInit(
-    @Content.EntityId, 
-    '@(Content.Autoplay ?? App.Settings.Autoplay)', 
-    @(Content.AnimationDuration ?? App.Settings.AnimationDuration),
-    @Html.Raw(Content.Effect.Configuration),
-    @Html.Raw(App.Settings.EffectFallback)
-  );
-</script>
+  var swiperData = new {
+    moduleId = Content.EntityId,
+    options = new {
+      autoplay = (Content.Autoplay ?? App.Settings.Autoplay),
+      speed = (Content.AnimationDuration ?? App.Settings.AnimationDuration),
+      effectDefaults = JsonConvert.DeserializeObject(Content.Effect.Configuration),
+      fallback = JsonConvert.DeserializeObject(App.Settings.EffectFallback)
+    }
+  };
 
+  var swiperDataJson = JsonConvert.SerializeObject(swiperData);
+}
+<turnOn turn-on='{"await": ["window.appSwiper2"], "run": "window.appSwiper2.initAppSwiper()", "data": @Html.Raw(swiperDataJson) }'></turnOn>
+
+@* todo: ask 2ro why this is in-page *@
 <style>
   @@supports (--custom:property) {
     [style*="--aspect-ratio"] {
