--- a/_Swiper.Empty.cshtml
+++ b/_Swiper.Empty.cshtml
@@ -1,6 +1,6 @@
 @inherits Custom.Hybrid.Razor12
 @if(Content.Slides.Count == 0) {
-    <div class="empty-slides container" @Edit.TagToolbar(Content.Slides)>
+    <div class="app-swiper2-empty-slides container" @Edit.TagToolbar(Content.Slides)>
         <div class="arrow">
         <div class="line"></div>
         <div class="point"></div>
