--- a/src/scss/bs4.scss
+++ b/src/scss/bs4.scss
@@ -1,16 +1,21 @@
-//
-// This SCSS generates the css file for bootstrap 4 themes
+// ** Information in case you're new to this**
+// This is an SCSS file. 
+// It generates the css file using Bootstrap4 standards.
 // To regenerate the SCSS using your variables (custom colors, etc.)
-// update the reference to your _variables.scss of your skin
-// please read the readme.md in this folder
-//
+// you can update the reference to your _variables.scss of your skin
+// please read the readme.md in this folder.
 
 
-// Add header-comments to the final file
-@import "_sass-comments.scss";
+// ** Add header-comments to the final file **
+// The following comment will be included in the final CSS
+// which helps users understand where it comes from
+/*!
+ * This file was auto-generated using SASS
+ * You can manually modify it - but usually you will want to 
+ * Re-generate it using the SASS variables of your theme
+*/
 
 // Include needed functions and mixins from Bootstrap 4
-
 @import "../../node_modules/bootstrap/scss/_functions";
 
 // Include needed variables and mixins from Bootstrap 4
@@ -23,4 +28,5 @@
 // Include swiper bundles
 @import "../../node_modules/swiper/swiper-bundle.css";
 
-@import "_style.scss";          // General CSS stuff for everything
+// Now parse the Swipe2 CSS Rules
+@import "_style.scss";
